# SOFIE-ALPAKA

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  requirements.txt  run.py  run_torch.py
.github/workflows/: build_and_test.yml
kernels/: concat.hpp  topk.cpp  topk.hpp  transpose.hpp  trivial.hpp  where.hpp
models/: Notebook1_ExploreDataset.ipynb  Notebook2_JetID_DNN.ipynb
tests/: test_concat.cpp  test_topk.cpp  test_transpose.cpp  test_trivial.cpp  test_where.cpp
tests/models/: concat_2D.onnx  transpose_model.onnx
tests/sofie_integration/: CMakeLists.txt  main.cxx
